[package]
name = "multisig-prover"
version = "0.6.0"
rust-version = { workspace = true }
edition = "2021"
description = "Multisig prover contract"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience, but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "multisig-prover-schema"
path = "src/bin/schema.rs"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
axelar-wasm-std = { workspace = true }
axelar-wasm-std-derive = { workspace = true }
bcs = { workspace = true }
coordinator = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
error-stack = { workspace = true }
ethers-contract = { workspace = true }
ethers-core = { workspace = true }
evm-gateway = { workspace = true }
gateway = { workspace = true }
gateway-api = { workspace = true }
hex = { workspace = true, features = [] }
itertools = { workspace = true }
k256 = { workspace = true, features = ["ecdsa"] }
multisig = { workspace = true, features = ["library"] }
report = { workspace = true }
router-api = { workspace = true }
serde_json = { workspace = true }
service-registry = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
voting-verifier = { workspace = true, features = ["library"] }

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
elliptic-curve = { workspace = true }
generic-array = { workspace = true }
prost = { workspace = true }

[lints]
workspace = true
