[package]
name = "multisig-prover"
version = "1.0.0"
rust-version = { workspace = true }
edition = { workspace = true }
description = "Multisig prover contract"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience, but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "multisig-prover-schema"
path = "src/bin/schema.rs"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
axelar-wasm-std = { workspace = true, features = ["derive"] }
bcs = "0.1.5"
coordinator = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = "1.0.1"
cw2 = { workspace = true }
error-stack = { workspace = true }
ethers-contract = { workspace = true }
ethers-core = { workspace = true }
evm-gateway = { workspace = true }
gateway = { workspace = true }
gateway-api = { workspace = true }
hex = { version = "0.4.3", default-features = false, features = [] }
itertools = "0.11.0"
k256 = { workspace = true }
msgs-derive = { workspace = true }
multisig = { workspace = true, features = ["library"] }
report = { workspace = true }
router-api = { workspace = true }
serde_json = "1.0.89"
service-registry = { workspace = true }
sha3 = { workspace = true }
stellar = { workspace = true }
sui-gateway = { workspace = true }
thiserror = { workspace = true }
voting-verifier = { workspace = true, features = ["library"] }

[dev-dependencies]
anyhow = "1.0"
cw-multi-test = "0.15.1"
elliptic-curve = "0.13.5"
generic-array = "0.14.7"
goldie = { workspace = true }
prost = "0.12.4"

[lints]
workspace = true
