[package]
name = "multisig-prover"
version = "1.1.1"
rust-version = { workspace = true }
license = "MIT OR Apache-2.0"
edition = { workspace = true }
description = "Multisig prover contract"

exclude = ["contract.wasm", "hash.txt"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "multisig-prover-schema"
path = "src/bin/schema.rs"

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
axelar-wasm-std = { workspace = true, features = ["derive"] }
chain-codec-api = { workspace = true }
client = { workspace = true }
coordinator = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
error-stack = { workspace = true }
gateway = { workspace = true }
gateway-api = { workspace = true }
hex = { version = "0.4.3", default-features = false, features = [] }
itertools = "0.11.0"
k256 = { workspace = true }
msgs-derive = { workspace = true }
multisig = { workspace = true, features = ["library"] }
multisig-prover-api = { workspace = true }
report = { workspace = true }
router-api = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
service-registry = { workspace = true }
service-registry-api = { workspace = true }
sha3 = { workspace = true }
stellar = { workspace = true }
stellar-xdr = { workspace = true }
thiserror = { workspace = true }
voting-verifier = { workspace = true, features = ["library"] }

[dev-dependencies]
anyhow = "1.0"
assert_ok = { workspace = true }
cw-multi-test = { workspace = true }
elliptic-curve = "0.13.5"
generic-array = "0.14.7"
goldie = { workspace = true }
prost = "0.12.4"

[lints]
workspace = true
