[package]
name = "multisig"
version = "0.1.0"
edition = "2021"
description = "Multisig contract"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["secp256k1", "ed25519"]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# use this feature to enable secp256k1 for signature verification
secp256k1 = []
# use this feature to enable ed25519 for signature verification
ed25519 = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
axelar-wasm-std = { workspace = true }
axelar-wasm-std-derive = { workspace = true }
cosmwasm-crypto = "1.2.7"
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
enum-display-derive = "0.1.1"
error-stack = { workspace = true }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
k256 = { version = "0.13.1", features = ["ecdsa"] }
report = { workspace = true }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0.89"
thiserror = { workspace = true }

[dev-dependencies]
cw-multi-test = "0.15.1"
rand = "0.8.5"
