[package]
name = "multisig"
version = "1.0.0"
rust-version = { workspace = true }
edition = { workspace = true }
description = "Multisig contract"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience, but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "multisig-schema"
path = "src/bin/schema.rs"

[features]
default = ["secp256k1", "ed25519"]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# use this feature to enable secp256k1 for signature verification
secp256k1 = []
# use this feature to enable ed25519 for signature verification
ed25519 = []
# use this feature to enable test utils
test = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
axelar-wasm-std = { workspace = true, features = ["derive"] }
cosmwasm-crypto = "1.2.7"
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = "1.0.1"
cw2 = { workspace = true }
ed25519-dalek = { workspace = true }
enum-display-derive = "0.1.1"
error-stack = { workspace = true }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
itertools = "0.11.0"
k256 = { workspace = true }
msgs-derive = { workspace = true }
report = { workspace = true }
rewards = { workspace = true, features = ["library"] }
router-api = { workspace = true }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0.89"
sha3 = { workspace = true }
signature-verifier-api = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
curve25519-dalek = "4.1.1"
cw-multi-test = "0.15.1"
goldie = { workspace = true }
hex = "0.4"

[lints]
workspace = true
