[package]
name = "multisig"
version = "2.1.0"
rust-version = { workspace = true }
license = "MIT OR Apache-2.0"
edition = { workspace = true }
description = "Multisig contract"

exclude = ["contract.wasm", "hash.txt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "multisig-schema"
path = "src/bin/schema.rs"

[features]
default = ["secp256k1", "ed25519"]
# use library feature to disable all instantiate/execute/query exports
library = []
# use this feature to enable secp256k1 for signature verification
secp256k1 = []
# use this feature to enable ed25519 for signature verification
ed25519 = []
# use this feature to enable test utils
test = []

[dependencies]
axelar-wasm-std = { workspace = true, features = ["derive"] }
client = { workspace = true }
cosmwasm-crypto = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
ed25519-dalek = { workspace = true }
enum-display-derive = "0.1.1"
error-stack = { workspace = true }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
itertools = "0.11.0"
k256 = { workspace = true }
msgs-derive = { workspace = true }
report = { workspace = true }
rewards = { workspace = true, features = ["library"] }
router-api = { workspace = true }
semver = { workspace = true }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0.89"
sha3 = { workspace = true }
signature-verifier-api = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_ok = { workspace = true }
curve25519-dalek = "4.1.3"
cw-multi-test = { workspace = true }
ed25519-dalek = { workspace = true, features = ["digest", "rand_core"] }
goldie = { workspace = true }
hex = "0.4"

[lints]
workspace = true
