[package]
name = "nexus-gateway"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axelar-wasm-std = { workspace = true }
axelar-wasm-std-derive = { workspace = true }
connection-router = { workspace = true, features = ["library"] }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
error-stack = { workspace = true }
hex = "0.4.3"
mockall = "0.11.4"
report = { workspace = true }
schemars = "0.8.15"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = { workspace = true }
