[package]
name = "nexus-gateway"
version = "1.0.0"
rust-version = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nexus-gateway-schema"
path = "src/bin/schema.rs"

[features]
library = []

[dependencies]
axelar-wasm-std = { workspace = true, features = ["derive"] }
axelarnet-gateway = { workspace = true, features = ["library"] }
client = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
error-stack = { workspace = true }
hex = "0.4.3"
mockall = "0.11.4"
msgs-derive = { workspace = true }
report = { workspace = true }
router-api = { workspace = true }
schemars = "0.8.15"
serde = { version = "1.0.188", features = ["derive"] }
sha3 = { workspace = true }
thiserror = { workspace = true }
voting-verifier = { workspace = true, features = ["library"] }

[lints]
workspace = true
