[package]
name = "outbound-evm-gateway"
version = "0.1.0"
edition = "2021"
description = "EVM Gateway contract handling outbound connections"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.2.1"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
auth = { workspace = true }
auth-multisig = { workspace = true }
service-interface = { workspace = true, features = ["library"] }
service-registry = { workspace = true }
connection-router = { workspace = true, features = ["library"] }
ethabi = { version = "18.0.0", default-features = false, features = [] }
hex = { version = "0.4.3", default-features = false, features = [] }
sha3 = { version = "0.10", default-features = false, features = [] }
libsecp256k1 = { version = "0.3.5", default-features = false }
serde_json = "1.0.89"
anyhow = "1.0.70"

[dev-dependencies]
cw-multi-test = "0.15.1"
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
